all of the scrolling is now right but I do need to fix where the events are being rendered - they are shifted in the x direction by axisWidth

--- a/src/agenda/agenda.css
+++ b/src/agenda/agenda.css
@@ -5,12 +5,21 @@
 .fc-agenda table {
 	border-collapse: separate;
 	}
+
+.fc-agenda-days-axis {
+    border-bottom: 1px solid #ddd;
+}
 	
 .fc-agenda-days th {
 	text-align: center;
 	}
+
+.fc-agenda .fc-agenda-axis .fc-day-content div {
+    display: table-cell;
+}
 	
-.fc-agenda .fc-agenda-axis {
+.fc-agenda .fc-agenda-axis,
+.fc-agenda .fc-agenda-axis .fc-day-content div {
 	width: 50px;
 	padding: 0 4px;
 	vertical-align: middle;
@@ -70,7 +79,8 @@
 	background: none;
 	}
 	
-.fc-agenda-slots td div {
+.fc-agenda-slots td div,
+.fc-agenda-slots th div {
 	height: 20px;
 	}
 	
@@ -87,6 +97,10 @@
 .fc-agenda-slots tr.fc-minor th.ui-widget-header {
 	*border-top-style: solid; /* doesn't work with background in IE6/7 */
 	}
+
+.fc-axis-scroller {
+    border-bottom: 1px solid #ddd;
+}
 	
 
 
